Fix spacing and add images

--- a/html/css/custom.css
+++ b/html/css/custom.css
@@ -103,5 +103,5 @@ p.question {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 2em;
+  margin-bottom: 1.5em;
 }
